# agrippa-pkg

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_TODO.md  pyproject.toml  requirements.txt
src/agrippa/: __init__.py  expr_parser.py  parse.py  utils.py
src/agrippa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agrippa/onnx2torch/: LICENSE  README.md  __init__.py  converter.py  onnx_graph.py  onnx_node.py
tests/anthropic/: README.md  anthropic.onnx  anthropic_exten.onnx  anthropic_results.pkl  anthropic_test.py  exten.py
tests/anthropic/anthropic-proj/: anthropic.agr  meta.json  weights.pkl
tests/anthropic/unshared-proj/: anthropic.agr  weights.pkl
tests/basic/: default.xml  linreg.py  test1.py  test10.py  test11.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py  testing.onnx
tests/basic/constant-proj/: constant.xml  weights.pkl
tests/basic/default-project/: default.agr  meta.json  weights.pkl
tests/basic/expr-project/: expr.agr
tests/basic/import-nest-proj/: main.agr  weights.pkl
tests/basic/import-proj/: main.agr  weights.pkl
tests/basic/layernorm/: layernorm.agr  weights.pkl
tests/basic/lin-reg/: main.agr  weights.pkl
tests/basic/softmax-proj/: softmax.agr
tests/basic/stretch-proj/: default.agr
tests/basic/transpose-proj/: transpose.agr
tests/train/: anthropic.onnx  anthropic_test.py  simple_testing.onnx  test1.py
tests/transformers/: decoder.onnx  mha.py  stretch.py  trans.py
tests/vision/: conv_net.onnx  vision.py
tests/zoo/: .gitignore  README.md  test.py
(+121 files in other folders)
