[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agrippa"
version = "0.1.0"
description = "Making AI easier"
readme = "README.md"
authors = [{ name = "Gordon Kamer", email = "gkamer@outlook.com" }]
license = { file = "LICENSE" }
keywords = ["ml", "ai"]
dependencies = [
    "numpy <= 1.23.4",
    "onnx >= 1.12.0"
]
requires-python = ">=3.8"
